--- a/.github/workflows/zabtechSolutions.yml
+++ b/.github/workflows/zabtechSolutions.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Extracting Ngrok Files.
       run: Expand-Archive ngrok.zip
     - name: Connecting to your Ngrok account.
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: .\ngrok\ngrok.exe authtoken 1LXmg3mubh9qXXgSwEH8ZUqoTf24P5q6QB_jjJfwmEuVXJADfREF7Aw
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: ${{ 1LXmg3mubh9qXXgSwEH8ZUqoTf24P5q6QB_jjJfwmEuVXJADfREF7Aw }}
     - name: Activating RDP access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
